This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
4/17/25: Fixed Tools menu contents.

4/17/25: Fixed setting a subdirectory for frames for DE camera, and fixed live
mode for API 2 (In 4.1).

4/15/25: Fixed Shift to Marker not being disabled with Navigator closed (In
4.1).

4/11/25: Fixed loss of Navigator menu.

4/9/25: Allowed space after '#' in other keyword comments in Python scripts.

4/9/25: Modernized default values for camera parameters.

4/9/25: Added property to set grid mesh for measureing pixel size from grid
bars.

4/9/25: Stopped trying to set DE property for motion correction when it is
unavailable (In 4.1).

4/8/25: Moved log submenu to its own menu.

4/7/25: Added script command to load montage piece or image at Navigator
point.

4/7/25: Possibly fixed montage reading problem where the last piece saved was
returned for the first piece being read in.

4/7/25: Enabled dynamic focus to work with CL3 in LM on JEOL; fixed dynamic
focus and probably some other problems when partial STEM scans are being
returned.  This applies to TVIPS STEM, and also to STEM on Thermo through
Utapi, where the ramp will done from SerialEM instead of FocusRamper.

4/7/25: Added ability to get focus from CL3 in LM in STEM on a JEOL, and
ability to autofocus and run routine to get delta Z versus defocus.

4/4/25:  SEM_4-1-23
4/1/25: Improved message when there is an error flashing FEG on JEOL and
stopped message box from coming up.

4/1/25: Added properties to get a warning when gain reference is older than a
given time.

4/1/25: Fixed displayed multishot progress numbers if items or groups are
skipped during acquisition.

4/1/25: Initial focus will be restored at end of batch tilt series if Focus