@@ -45,7 +45,7 @@ INT_PROP_TEST("BiggestGIFApertureNumber", camera->, GIFBiggestAperture)
 FLOAT_PROP_TEST("MinimumBlankingTime", camera->, MinBlankingTime)
 FLOAT_PROP_TEST("CameraTimeoutFactor", camera->, TimeoutFactor)
 INT_PROP_TEST("CameraRetries", camera->, RetryLimit)
-BOOL_PROP_TEST("MakeFEIerrorBeTimeout", camera->, MakeFEIerrorBeTimeout)
+INT_PROP_TEST("MakeFEIerrorBeTimeout", camera->, MakeFEIerrorBeTimeout)
 BOOL_PROP_TEST("OtherCamerasInTIA", camera->, OtherCamerasInTIA)
 FLOAT_PROP_TEST("ScalingForK2Counts", camera->, ScalingForK2Counts)
 FLOAT_PROP_TEST("MinimumK2FrameTime", camera->, MinK2FrameTime)
